[gd_scene load_steps=5 format=1]

[ext_resource path="res://Scripts/RigidController.gd" type="Script" id=1]
[ext_resource path="res://Scenes/PlayerSprite.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 21.2782, 58.7605 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 25.9161, 4.09235 )

[node name="Player" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 2
mode = 0
mass = 2.04082
friction = 1.0
bounce = 0.0
gravity_scale = 3.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
p_number = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.323532, 60.4533 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( -0.323532, 60.4533 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="PlayerSprite" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 0, -0.0273304 )
transform/scale = Vector2( 0.5, 0.5 )
modulate = Color( 0.863281, 0.114655, 0.114655, 1 )

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="Area2D" to="." method="_on_Area2D_body_exit"]


